src/styles/layout.scss
@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Courgette&family=Inter:wght@400;500&family=Manrope&family=Righteous&family=Roboto&family=Sofia&display=swap');
* {
    margin: 0;
    font-family: Inter;
    color: white;
    .mapboxgl-ctrl-attrib {
        display: none;
    }
  
  .mapboxgl-ctrl-compact {
    display: none;
  }
}

$background-color: #02001E;
$nav-container-color: #200b8b3c;
$nav-link-container-color: #150639d5;
$blue-400: #4299E1;
$blue-500: #3182CE;
$sub-header-color: #dee2e6;
$default-card-color: #213363;
$default-card-hover-color: #213d8d;
$mustard-yellow: #FFC436;
$mustard-hover-yellow: #e1ae37;
$instagram-pink: #D53F8C;
$linkedin-blue-color: #0072b1;
$twitter-blue-color: #00acee;
$form-label-gray: #6A6A6A;
$neon-green-color: #16FF00;
$active-green-color: #64ffda;


// ******** COMMON CLASSES ********

.container {
    margin: 2rem 7rem;
}

.sub-heading {
    font-size: 1rem;
    color: $sub-header-color;

    &::after {
        content: "";
        width: 120px;
        height: 2px;
        display: inline-block;
        background: $sub-header-color;
        margin: 4px 10px;
    }
}

.typed-cursor {
    color: $neon-green-color;
}

.active-link {
    color: $active-green-color;
    position: relative;
}

.active-link::after {
    content: '';
    position: absolute;
    bottom: -5px;
    left: 17px;
    transform: translateX(-50%);
    width: 2rem;
    height: 2.5px;
    background-color: $active-green-color;
}

.contact-input{
    color: #02001E;
    border: 1.2px solid #9E9FA5;
    &:hover{
        border-color: #bcbcbc;
    }
}

// ******** HOMEPAGE COMPONENT ********

.home-container {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: -1;
}

.body-theme {
    background-color: $background-color;
}

.typed-text {
    color: $neon-green-color;
}

// ******** ABOUT SECTION ********

.about-main-container{
    position: absolute;
    top: 18rem;
    left: 10rem;
  }

.name-heading{
    font-size: 3.7rem;
}

.about-container {
    margin: 2rem 8rem;
}

.about-layout-container {
    display: grid;
    grid-template-columns: 30% 70%;
    font-size: 1.1rem;
    margin-bottom: 4rem;

    p {
        text-align: justify;
    }
};

// ******** BLOGS SECTION ********


.blogs-container {
    width: 85rem;
    padding: 1.3rem 0;
    margin: auto 3rem;
}

;

.blogs-grid-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
}

.articles-card {
    background-color: $default-card-color;
    width: 20rem;
    height: 30rem;
    margin: 0.5rem;
}

.article-btn {
    background-color: $mustard-yellow;

    a {
        &:hover {
            text-decoration: none;
        }

    }

    &:hover {
        background-color: $mustard-hover-yellow;

    }
}

;

// ******** CONTACT SECTION ********


.contact-container {
    margin-top: 5rem;
    display: grid;
    grid-template-columns: 40% 55%;
}

.contact-text-span {
    font-size: 1.4rem;
    display: flex;
    align-items: center;
}
// keep it
.contact-form-card {
    label {
        color: $form-label-gray;
        font-weight: 900;
    }
}

.social-container {
    font-size: 3rem;
    margin-top: 7rem;

    svg {
        padding: 10px;
        border-radius: 1.1rem;
        cursor: pointer;
    }

    .instagram {
        background-color: $instagram-pink;
    }

    .linkedin {
        background-color: $linkedin-blue-color;
    }

    .twitter {
        background-color: $twitter-blue-color;
    }

}

;


//! ******** iphone 12pro screen ********

@media screen and (max-width: 390px) {

    // ******** ABOUT SECTION ********

    .about-main-container{
        top: 15rem;
        left: 1.22rem;
        text-align: center;
      }

    .name-heading{
        font-size: 1.8rem;
        margin-bottom: 3rem;
    }
    
    .about-container {
        margin: 3.5rem;
    }

    .about-layout-container {
        display: block;
    };

    // ******** BLOGS SECTION ********

    .blogs-container {
        margin: auto 1.6rem;
    };

    .articles-card {
        margin: 2rem 0.5rem;
    }

    .blogs-grid-container {
        display: block;
    }

    // ******** CONTACT SECTION ********

    .container {
        margin: 1.2rem;
    }

    .contact-container {
        margin-top: 1.5rem;
        display: block;

        .chakra-heading {
            font-size: 2.1rem;
        }

        .chakra-stack {
            margin-top: 1rem;
        }
    }

    .contact-text-span {
        font-size: 1.2rem;
        display: flex;
        align-items: center;
    }
// Keep this one
    .contact-form-card {
        padding: 0;
        margin-bottom: 3rem;

        .chakra-heading {
            font-size: 1.2rem;
        }

        label {
            font-size: 1rem;
        }

    }

    .social-container {
        margin-bottom: 2.5rem;
    };

}

